--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   validate:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: ${{ !github.event.issue.pull_request && contains(github.event.issue.labels.*.name, 'preservation') }}
     outputs:
       success: ${{ steps.success.outputs.success }}
