--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -8,23 +8,31 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     if: ${{ !github.event.issue.pull_request && contains(github.event.issue.labels.*.name, 'preservation') }}
-    outputs:
-      success: ${{ steps.success.outputs.success }}
     steps:
       - uses: actions/checkout@v4
 
-      # TODO check for open issues with 'attention' or 'failure' label
-      # fail the job in those cases because of potential file system cruft
       - id: issues
         run: |
-          echo $(gh issue list --json url --jq length)
-          echo $(gh issue list --label 'attention' --json url --jq length)
-          if [ "$(gh issue list --label 'attention' --json url --jq length)" -gt 0 ]; then
-            echo "open attention issue"
+          msg=''
+          attention_count="$(gh issue list --label 'attention' --json url --jq length)"
+          if [ "$attention_count" -gt 0 ]; then
+            msg="${msg}${attention_count} open 'attention' issue"
+            if [ "$attention_count" -gt 1 ]; then
+              msg="${msg}s"
+            fi
           fi
-          echo $(gh issue list --label 'failure' --json url --jq length)
-          if [ "$(gh issue list --label 'failure' --json url --jq length)" -gt 0 ]; then
-            echo "open failure issue"
+          failure_count="$(gh issue list --label 'failure' --json url --jq length)"
+          if [ "$failure_count" -gt 0 ]; then
+            if [ "$attention_count" -gt 0 ]; then
+              msg="${msg} and "
+            fi
+            msg="${msg}${failure_count} open 'failure' issue"
+            if [ "$failure_count" -gt 1 ]; then
+              msg="${msg}s"
+            fi
+          fi
+          if [ "$attention_count" -gt 0 ] || [ "$failure_count" -gt 0 ]; then
+            exit "$msg"
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
