--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -13,27 +13,37 @@ jobs:
 
       - id: issues
         run: |
-          msg=''
-          attention_count="$(gh issue list --label 'attention' --json url --jq length)"
-          if [ "$attention_count" -gt 0 ]; then
-            msg="${msg}${attention_count} open 'attention' issue"
-            if [ "$attention_count" -gt 1 ]; then
-              msg="${msg}s"
-            fi
-          fi
-          failure_count="$(gh issue list --label 'failure' --json url --jq length)"
-          if [ "$failure_count" -gt 0 ]; then
-            if [ "$attention_count" -gt 0 ]; then
-              msg="${msg} and "
-            fi
-            msg="${msg}${failure_count} open 'failure' issue"
-            if [ "$failure_count" -gt 1 ]; then
-              msg="${msg}s"
-            fi
-          fi
-          if [ "$attention_count" -gt 0 ] || [ "$failure_count" -gt 0 ]; then
-            exit "$msg"
-          fi
+          # msg=''
+          # attention_count="$(gh issue list --label 'attention' --json url --jq length)"
+          # if [ "$attention_count" -gt 0 ]; then
+          #   msg="${msg}${attention_count} open 'attention' issue"
+          #   if [ "$attention_count" -gt 1 ]; then
+          #     msg="${msg}s"
+          #   fi
+          # fi
+          # failure_count="$(gh issue list --label 'failure' --json url --jq length)"
+          # if [ "$failure_count" -gt 0 ]; then
+          #   if [ "$attention_count" -gt 0 ]; then
+          #     msg="${msg} and "
+          #   fi
+          #   msg="${msg}${failure_count} open 'failure' issue"
+          #   if [ "$failure_count" -gt 1 ]; then
+          #     msg="${msg}s"
+          #   fi
+          # fi
+          # if [ "$attention_count" -gt 0 ] || [ "$failure_count" -gt 0 ]; then
+          #   gh issue edit ${{ github.event.issue.number }} \
+          #     --add-label "failure" \
+          #     --title "Open Issues Blocking Preservation Workflow"
+          #   COMMENT_BODY=$(echo -e "The following issues must be closed before the preservation workflow can run: ")
+          #   gh issue comment ${{ github.event.issue.number }} --body "$COMMENT_BODY"
+          #   gh issue edit ${{ github.event.issue.number }} --add-assignee ${{ github.actor }}
+          #   exit "$msg"
+          # fi
+          blocking_issues="$(gh issue list --label 'attention,failure' --json number)"
+          echo "blocking issues: $blocking_issues"
+          no_issues="$(gh issue list --label 'bug' --json number)"
+          echo "no issues: $no_issues"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -56,7 +66,6 @@ jobs:
           COMMENT_BODY=$(echo -e "$CODEBLOCK\nReply with a new comment containing the text **OK** to approve the validation results and continue the workflow execution.")
           gh issue comment ${{ github.event.issue.number }} --body "$COMMENT_BODY"
           gh issue edit ${{ github.event.issue.number }} --add-assignee ${{ github.actor }}
-          echo "success=true" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
