--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -42,8 +42,12 @@ jobs:
           # fi
           blocking_issues="$(gh issue list --search "label:attention,failure" --json number)"
           echo "blocking issues: $blocking_issues"
+          formatted_blocking_issues="$(gh issue list --search "label:attention,failure" --json number --jq '\n- .[].number')"
+          echo -e "here is maybe a formatted list:\n${formatted_blocking_issues}"
           no_issues="$(gh issue list --label 'bug' --json number)"
           echo "no issues: $no_issues"
+          formatted_no_issues="$(gh issue list --label 'bug' --json number --jq '\n- .[].number')"
+          echo "formatted no issues: $formatted_no_issues"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
