--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -44,7 +44,7 @@ jobs:
           echo "blocking issues: $blocking_issues"
           formatted_blocking_issues="$(gh issue list --search "label:attention,failure" --json number --jq '"- #\(.[].number)"')"
           echo -e "here is maybe a formatted list:\n\n${formatted_blocking_issues}"
-          if [ -z "$formatted_blocking_issues" ]; then
+          if [ ! -z "$formatted_blocking_issues" ]; then
             gh issue edit ${{ github.event.issue.number }} \
               --add-label "failure" \
               --title "Open Issues Blocking Preservation Workflow"
