--- a/.github/workflows/execution.yml
+++ b/.github/workflows/execution.yml
@@ -8,15 +8,29 @@ jobs:
   execute:
     runs-on: ubuntu-latest
     if: ${{ !github.event.issue.pull_request && contains(github.event.issue.labels.*.name, 'preservation') && github.event.issue.assignee.name == github.event.comment.user.name }}
-    outputs:
-      success: ${{ steps.success.outputs.success }}
     steps:
       # TODO check for multiple open issues with 'attention' or 'failure' label
       # fail the job in those cases because of potential file system cruft
 
       - uses: actions/checkout@v4
 
-      - id: script
+      - name: Check for blocking issues
+        run: |
+          blockers="$(gh issue list --search "label:attention,failure" --json number --jq '"del(.[] | select(.number == ${{ github.event.issue.number }})) | - #\(.[].number)"')"
+          if [ -n "$blockers" ]; then
+            gh issue edit ${{ github.event.issue.number }} \
+              --add-label "failure" \
+              --title "Open Issues Blocking Preservation Workflow"
+            COMMENT_BODY=$(echo -e "This issue and the following issues must be closed before the preservation workflow can run:\n\n${blockers}")
+            gh issue comment ${{ github.event.issue.number }} --body "$COMMENT_BODY"
+            gh issue edit ${{ github.event.issue.number }} --add-assignee ${{ github.actor }}
+            exit 1
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run execution code
+        id: script
         # read the body of the comment for substring "ok"
         if: contains(github.event.comment.body, 'ok')
         run: |
@@ -25,7 +39,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: exit
+      - name: Close issue with canceled label
         # read the body of the comment for anything other than substring "ok"
         if: ${{ !contains(github.event.comment.body, 'ok') }}
         run: |
@@ -38,7 +52,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: success
+      - name: Comment with success output
         if: always() && steps.script.outcome == 'success'
         run: |
           gh issue edit ${{ github.event.issue.number }} \
@@ -51,8 +65,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: failure
-        if: always() && steps.script.outcome != 'success'
+      - name: Comment with failure output
+        if: always() && steps.script.outcome != 'success' && steps.script.outcome != 'skipped'
         run: |
           gh issue edit ${{ github.event.issue.number }} \
             --add-label "failure" \
